Fixed String->Primary conversion
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/jxpath/trunk@136729 13f79535-47bb-0310-9956-ffa450edef68