@@ -1,7 +1,7 @@
 /*
- * $Header: /home/jerenkrantz/tmp/commons/commons-convert/cvs/home/cvs/jakarta-commons//jxpath/src/java/org/apache/commons/jxpath/util/TypeUtils.java,v 1.2 2002/04/24 04:05:39 dmitri Exp $
- * $Revision: 1.2 $
- * $Date: 2002/04/24 04:05:39 $
+ * $Header: /home/jerenkrantz/tmp/commons/commons-convert/cvs/home/cvs/jakarta-commons//jxpath/src/java/org/apache/commons/jxpath/util/TypeUtils.java,v 1.3 2002/04/26 00:57:11 dmitri Exp $
+ * $Revision: 1.3 $
+ * $Date: 2002/04/26 00:57:11 $
  *
  * ====================================================================
  * The Apache Software License, Version 1.1
@@ -69,7 +69,7 @@ import org.apache.commons.jxpath.Pointer;
 
 /**
  * @author Dmitri Plotnikov
- * @version $Revision: 1.2 $ $Date: 2002/04/24 04:05:39 $
+ * @version $Revision: 1.3 $ $Date: 2002/04/26 00:57:11 $
  */
 public class TypeUtils {
 
@@ -340,6 +340,16 @@ public class TypeUtils {
             if (toType.isPrimitive()){
                 return true;
             }
+            if (toType == Boolean.class ||
+                    toType == Character.class ||
+                    toType == Byte.class ||
+                    toType == Short.class ||
+                    toType == Integer.class ||
+                    toType == Long.class ||
+                    toType == Float.class ||
+                    toType == Double.class){
+                return true;
+            }
         }
         else if (object instanceof ExpressionContext){
             if (Collection.class.isAssignableFrom(toType)){
@@ -443,7 +453,7 @@ public class TypeUtils {
         }
         else if (object instanceof String){
             if (toType == boolean.class || toType == Boolean.class){
-                return new Boolean((String)object);
+                return Boolean.valueOf((String)object);
             }
             if (toType == char.class || toType == Character.class){
                 return new Character(((String)object).charAt(0));
